module(name = "rules_scala_full_bzlmod")

bazel_dep(name = "rules_scala", version = "7.0.0")
bazel_dep(name = "rules_python", version = "0.40.0")

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)

scala_config.settings(scala_version = "2.13.16")

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.settings(fetch_sources = False)
scala_deps.scala()
scala_deps.scalatest()
