load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "installationcontext",
    srcs = glob(["*.kt"]),
    visibility = [
        "//server/install/src/main/kotlin/org/jetbrains/bsp/bazel/install:__subpackages__",
        "//server/install/src/test/kotlin/org/jetbrains/bsp/bazel/install/cli:__pkg__",
    ],
)
